--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= %></title>
+    <title>
+      <%= typeof title !== 'undefined' || typeof title !== '' ?
+      title:'Foodie-Blog' %>
+    </title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,5 +26,35 @@
     />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body></body>
+  <div class="master-container container-xxl">
+    <header class="master-header">
+      <a class="logo-link col-md-2" href="/"
+        ><img
+          class="logo-img"
+          src="/img/foodie.png"
+          alt="foodie"
+      /></a>
+      <ul class="nav-ul nav col-12 col-md-auto">
+        <li><a class="a nav-link link-secondary" href="/">Home</a></li>
+        <li><a class="a nav-link link-secondary" href="/about">About</a></li>
+        <li><a class="a nav-link link-secondary" href="/submit-recipe">Submit</a></li>
+        <li><a class="a nav-link link-secondary" href="/contact">Contact</a></li>
+      </ul>
+
+      <div class="form col-md-3">
+        <form action="/search" method="POST">
+          <input
+            type="search"
+            name="searchTerm"
+            class="form-control"
+            placeholder="Search your recipes"
+          />
+        </form>
+      </div>
+    </header>
+    <main><%- body -%></main>
+
+    <footer class="footer">&copy; by Foodie</footer>
+  </div>
+  </body>
 </html>
