--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,14 @@
-body {
+* {
   box-sizing: border-box;
 }
-.master-container {
+:root {
+  --bs-font-sans-serif: "open-sans";
+}
+body {
   background-color: white;
+}
+.master-container {
+  max-width: 1520px;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
   padding-right: 3rem;
   padding-left: 3rem;
@@ -42,6 +48,8 @@ body {
 .a {
   padding-right: 0.5rem;
   padding-left: 0.5rem;
+  font-weight: 600;
+  font-size: 18px;
 }
 
 .footer {
