--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,21 @@
-<h1>main page</h1>
+<div class="index-container row flex-lg-row-reverse">
+  <div class="index-layout col-12 col-lg-6">
+    <img
+      src="/img/index-main.png"
+      alt="foodbowl"
+      class="index-img d-block mx-lg-auto img-fluid"
+    />
+  </div>
+  <div class="col-lg-6">
+    <h1 class="index-h1">The largest selection of unique recipes</h1>
+    <p>
+      Explore the largest selection of easy yet tasty recipes. Find everything
+      from desserts, to gluten free, to international cusine. Explore now and
+      discover your recipes to share with your friends and families!
+    </p>
+    <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+      <a href="#" class="btn btn-dark btn-lg">See Trending</a>
+      <a href="#" class="btn btn-outline-secondary btn-lg">Random Recipe</a>
+    </div>
+  </div>
+</div>
