--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,9 @@
 * {
   box-sizing: border-box;
 }
-:root {
-  --bs-font-sans-serif: "open-sans";
-}
+/* :root {
+  --bs-font-sans-serif: "open sans";
+} */
 body {
   background-color: white;
 }
@@ -55,4 +55,30 @@ body {
 .footer {
   padding-top: 3rem;
   padding-bottom: 3rem;
+}
+
+.index-container {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  margin-bottom: 1.5rem;
+  align-items: center;
+  --bs-gutter-y: 3rem;
+  --bs-gutter-x: 3rem;
+}
+.index-img {
+  width: 642px;
+  height: 647px;
+  filter: drop-shadow(35px 26px 33px rgba(0, 0, 0, 0.25));
+}
+
+.index-h1 {
+  margin-bottom: 1rem;
+  display: block;
+  font-size: 67px;
+  font-weight: 600;
+}
+.btn {
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
+  margin-right: 0.5rem;
 }
