wip:adding trending recipe section, category section, and submit section

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,3 +19,106 @@
     </div>
   </div>
 </div>
+<!-- Category -->
+<div class="category-div row row-cols-2 row-cols-lg-6 g-2 g-lg-3">
+  <a href="#" class="col text-center category-link">
+    <div class="category-img shadow">
+      <img src="img/burger.png" alt="" />
+    </div>
+    <div class="pt-1">Something</div>
+  </a>
+  <a href="#" class="col text-center category-link">
+    <div class="category-img shadow">
+      <img src="img/tacos.png" alt="" />
+    </div>
+    <div class="pt-1">Something</div>
+  </a>
+  <a href="#" class="col text-center category-link">
+    <div class="category-img shadow">
+      <img src="img/thai.png" alt="" />
+    </div>
+    <div class="pt-1">Something</div>
+  </a>
+  <a href="#" class="col text-center category-link">
+    <div class="category-img shadow">
+      <img src="img/korean.png" alt="" />
+    </div>
+    <div class="pt-1">Something</div>
+  </a>
+  <a href="#" class="col text-center category-link">
+    <div class="category-img shadow">
+      <img src="img/chinese.png" alt="" />
+    </div>
+    <div class="pt-1">Something</div>
+  </a>
+  <a href="#" class="col text-center category-link">
+    <div class="category-img shadow">
+      <img src="img/curry.png" alt="" />
+    </div>
+    <div class="pt-1">Something</div>
+  </a>
+</div>
+
+<!-- Trending Recipes -->
+<section class="trending-secion">
+  <div class="d-flex mb-2 align-items-center">
+    <h2>Trending Recipes</h2>
+    <a href="#" class="ms-auto">Explore More</a>
+  </div>
+
+  <div class="row row-cols-1 row-cols-lg-5 g-2 g-lg-3">
+    <a href="#" class="col text-center trending-link">
+      <div class="trending-img shadow">
+        <img src="img/pic1.png" alt="" />
+      </div>
+      <div>Something</div>
+    </a>
+
+    <a href="#" class="col text-center trending-link">
+      <div class="trending-img shadow">
+        <img src="img/pic2.png" alt="" />
+      </div>
+      <div>Something</div>
+    </a>
+
+    <a href="#" class="col text-center trending-link">
+      <div class="trending-img shadow">
+        <img src="img/pic3.png" alt="" />
+      </div>
+      <div>Something</div>
+    </a>
+
+    <a href="#" class="col text-center trending-link">
+      <div class="trending-img shadow">
+        <img src="img/pic4.png" alt="" />
+      </div>
+      <div>Something</div>
+    </a>
+
+    <a href="#" class="col text-center trending-link">
+      <div class="trending-img shadow">
+        <img src="img/pic5.png" alt="" />
+      </div>
+      <div>Something</div>
+    </a>
+  </div>
+</section>
+
+<!-- submit -->
+<section class="submit-section px-4 py-5 my-5 text-center">
+  <img
+    class="d-block mx-auto mb-4 img-fluid"
+    width="566"
+    height="208"
+    src="img/submit.png"
+    alt=""
+  />
+  <h1 class="display-5 fw-bold">Publish your recipe</h1>
+  <p class="lead mb-4">
+    Publish your recipe on the world's largest recipe platform and get your
+    recipe in front of millions of people.
+  </p>
+  <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+    <a href="" class="btn btn-primary btn-dark btn-lg">Submit Recipe</a>
+  </div>
+</section>
