--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,9 @@
 body {
   background-color: white;
 }
+a {
+  color: var(--bs-dark);
+}
 .master-container {
   max-width: 1520px;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
@@ -81,4 +84,65 @@ body {
   padding-right: 1.5rem;
   padding-left: 1.5rem;
   margin-right: 0.5rem;
+}
+
+.trending-section {
+  padding-bottom: 1.5rem;
+  padding-top: 1.5rem;
+}
+
+.trending-link {
+  text-align: center;
+  display: block;
+  text-decoration: none;
+  transition: 250ms all;
+}
+.trending-link:hover {
+  transform: scale(1.1);
+  color: black;
+}
+
+.trending-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.13);
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+.trending-img img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.category-div {
+  padding-top: 1.5rem;
+  padding-bottom: 8rem;
+}
+
+.category-link {
+  text-align: center;
+  display: block;
+  text-decoration: none;
+  transition: 250ms all;
+}
+.category-link:hover {
+  transform: scale(1.1);
+  color: black;
+}
+.category-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  margin-bottom: 10px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.13);
+  overflow: hidden;
+  border-radius: 8px;
+}
+.category-img img {
+  width: 100%;
+  object-fit: cover;
 }
