adding the categories path

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
   </a>
   <% }) %> <% } %>
 
-  <a href="#" class="col text-center category-link">
+  <a href="/categories" class="col text-center category-link">
     <div class="category-img shadow">
       <img src="img/curry.png" alt="" />
     </div>
