created the recipe page

--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -45,7 +45,7 @@
         <form action="/search" method="POST">
           <input
             type="search"
-            name="searchTerm"
+            name="searchRecipe"
             class="form-control"
             placeholder="Search your recipes"
           />
