--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,7 @@
     </div>
   </div>
 </div>
+
 <!-- Category -->
 <div class="category-div row row-cols-2 row-cols-lg-6 g-2 g-lg-3">
   <% if (categories !== '') { %> <% categories.forEach((category, index) =>{ %>
@@ -48,41 +49,80 @@
     <a href="#" class="ms-auto">Explore More</a>
   </div>
 
-  <div class="row row-cols-1 row-cols-lg-5 g-2 g-lg-3">
-    <a href="#" class="col text-center trending-link">
+  <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+    <% if (food !== '') { %> <% food.trending.forEach((recipe, index)=>{ %>
+    <a href="/recipe/<%= recipe._id %>" class="col text-center trending-link">
       <div class="trending-img shadow">
-        <img src="img/pic1.png" alt="" />
+        <img src="/uploads/<%= recipe.image %>" alt="<%= recipe.name %>" />
       </div>
-      <div>Something</div>
+      <div class="pt-1"><%= recipe.name %></div>
     </a>
+    <% }) %> <% } %>
+  </div>
+</section>
 
-    <a href="#" class="col text-center trending-link">
-      <div class="trending-img shadow">
-        <img src="img/pic2.png" alt="" />
-      </div>
-      <div>Something</div>
-    </a>
+<!-- American -->
+<section class="trending-secion">
+  <div class="d-flex mb-2 align-items-center">
+    <h2>American Recipes</h2>
+    <a href="/categories/American" class="ms-auto">Explore More</a>
+  </div>
 
-    <a href="#" class="col text-center trending-link">
+  <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+    <% if (typeof food.american !== 'undefined' && food.american.length >0) { %>
+    <% food.american.forEach((recipe, index)=>{ %>
+    <a href="/recipe/<%= recipe._id %>" class="col text-center trending-link">
       <div class="trending-img shadow">
-        <img src="img/pic3.png" alt="" />
+        <img src="/uploads/<%= recipe.image %>" alt="<%= recipe.name %>" />
       </div>
-      <div>Something</div>
+      <div class="pt-1"><%= recipe.name %></div>
     </a>
+    <% }) %> <% } else { %>
+    <p>No recipes found...</p>
+    <% } %>
+  </div>
+</section>
 
-    <a href="#" class="col text-center trending-link">
-      <div class="trending-img shadow">
-        <img src="img/pic4.png" alt="" />
-      </div>
-      <div>Something</div>
-    </a>
+<!-- Thai -->
+<section class="trending-secion">
+  <div class="d-flex mb-2 align-items-center">
+    <h2>Thai Recipes</h2>
+    <a href="/categories/Thai" class="ms-auto">Explore More</a>
+  </div>
 
-    <a href="#" class="col text-center trending-link">
+  <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+    <% if (food.thai !== '') { %> <% food.thai.forEach((recipe, index)=>{ %>
+    <a href="/recipe/<%= recipe._id %>" class="col text-center trending-link">
       <div class="trending-img shadow">
-        <img src="img/pic5.png" alt="" />
+        <img src="/uploads/<%= recipe.image %>" alt="<%= recipe.name %>" />
       </div>
-      <div>Something</div>
+      <div class="pt-1"><%= recipe.name %></div>
     </a>
+    <% }) %> <% } else { %>
+    <p>No recipes found...</p>
+    <% } %>
+  </div>
+</section>
+
+<!-- Chinese -->
+<section class="trending-secion">
+  <div class="d-flex mb-2 align-items-center">
+    <h2>Chinese Recipes</h2>
+    <a href="/categories/Chinese" class="ms-auto">Explore More</a>
+  </div>
+
+  <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+    <% if (food.chinese !== '') { %> <% food.chinese.forEach((recipe, index)=>{
+    %>
+    <a href="/recipe/<%= recipe._id %>" class="col text-center trending-link">
+      <div class="trending-img shadow">
+        <img src="/uploads/<%= recipe.image %>" alt="<%= recipe.name %>" />
+      </div>
+      <div class="pt-1"><%= recipe.name %></div>
+    </a>
+    <% }) %> <% } else { %>
+    <p>No recipes found...</p>
+    <% } %>
   </div>
 </section>
 
