--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,8 +14,10 @@
       discover your recipes to share with your friends and families!
     </p>
     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-      <a href="#" class="btn btn-dark btn-lg">See Trending</a>
-      <a href="#" class="btn btn-outline-secondary btn-lg">Random Recipe</a>
+      <a href="/trending" class="btn btn-dark btn-lg">See Trending</a>
+      <a href="/categories" class="btn btn-outline-secondary btn-lg"
+        >Food Category</a
+      >
     </div>
   </div>
 </div>
@@ -33,13 +35,6 @@
     <div class="pt-1"><%- category.name %></div>
   </a>
   <% }) %> <% } %>
-
-  <a href="/categories" class="col text-center category-link">
-    <div class="category-img shadow">
-      <img src="img/curry.png" alt="" />
-    </div>
-    <div class="pt-1">Hungry for more?</div>
-  </a>
 </div>
 
 <!-- Trending Recipes -->
