changing input name from search section to searchRecipe

--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -40,7 +40,8 @@
         <li><a class="a nav-link link-secondary" href="/submit-recipe">Submit</a></li>
         <li><a class="a nav-link link-secondary" href="/contact">Contact</a></li>
       </ul>
-
+      
+<!-- Search -->
       <div class="form col-md-3">
         <form action="/search" method="POST">
           <input
