--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
   </div>
 
   <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-    <% if (food !== '') { %> <% food.trending.forEach((recipe, index)=>{ %>
+    <% if (trending !== '') { %> <% trending.forEach((recipe, index)=>{ %>
     <a href="/recipe/<%= recipe._id %>" class="col text-center trending-link">
       <div class="trending-img shadow">
         <img src="/uploads/<%= recipe.image %>" alt="<%= recipe.name %>" />
@@ -53,71 +53,6 @@
       <div class="pt-1"><%= recipe.name %></div>
     </a>
     <% }) %> <% } %>
-  </div>
-</section>
-
-<!-- American -->
-<section class="trending-secion">
-  <div class="d-flex mb-2 align-items-center">
-    <h2>American Recipes</h2>
-    <a href="/categories/American" class="ms-auto">Explore More</a>
-  </div>
-
-  <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-    <% if (typeof food.american !== 'undefined' && food.american.length >0) { %>
-    <% food.american.forEach((recipe, index)=>{ %>
-    <a href="/recipe/<%= recipe._id %>" class="col text-center trending-link">
-      <div class="trending-img shadow">
-        <img src="/uploads/<%= recipe.image %>" alt="<%= recipe.name %>" />
-      </div>
-      <div class="pt-1"><%= recipe.name %></div>
-    </a>
-    <% }) %> <% } else { %>
-    <p>No recipes found...</p>
-    <% } %>
-  </div>
-</section>
-
-<!-- Thai -->
-<section class="trending-secion">
-  <div class="d-flex mb-2 align-items-center">
-    <h2>Thai Recipes</h2>
-    <a href="/categories/Thai" class="ms-auto">Explore More</a>
-  </div>
-
-  <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-    <% if (food.thai !== '') { %> <% food.thai.forEach((recipe, index)=>{ %>
-    <a href="/recipe/<%= recipe._id %>" class="col text-center trending-link">
-      <div class="trending-img shadow">
-        <img src="/uploads/<%= recipe.image %>" alt="<%= recipe.name %>" />
-      </div>
-      <div class="pt-1"><%= recipe.name %></div>
-    </a>
-    <% }) %> <% } else { %>
-    <p>No recipes found...</p>
-    <% } %>
-  </div>
-</section>
-
-<!-- Chinese -->
-<section class="trending-secion">
-  <div class="d-flex mb-2 align-items-center">
-    <h2>Chinese Recipes</h2>
-    <a href="/categories/Chinese" class="ms-auto">Explore More</a>
-  </div>
-
-  <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-    <% if (food.chinese !== '') { %> <% food.chinese.forEach((recipe, index)=>{
-    %>
-    <a href="/recipe/<%= recipe._id %>" class="col text-center trending-link">
-      <div class="trending-img shadow">
-        <img src="/uploads/<%= recipe.image %>" alt="<%= recipe.name %>" />
-      </div>
-      <div class="pt-1"><%= recipe.name %></div>
-    </a>
-    <% }) %> <% } else { %>
-    <p>No recipes found...</p>
-    <% } %>
   </div>
 </section>
 
@@ -136,6 +71,8 @@
     recipe in front of millions of people.
   </p>
   <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-    <a href="" class="btn btn-primary btn-dark btn-lg">Submit Recipe</a>
+    <a href="/submit-recipe" class="btn btn-primary btn-dark btn-lg"
+      >Submit Recipe</a
+    >
   </div>
 </section>
