--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -43,3 +43,11 @@
 <% } else { %>
 <p>No recipe found...</p>
 <% } %>
+<div class="edit">
+  <section>
+    <a href="/recipe/<%=recipe._id%>/edit">Edit</a>
+    <form action="/recipe/<%=recipe._id%>?_method=DELETE" method="POST">
+      <input type="submit" value="Delete Recipe" />
+    </form>
+  </section>
+</div>
