specifying the path to the explore more link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,7 @@
 <section class="trending-secion">
   <div class="d-flex mb-2 align-items-center">
     <h2>Trending Recipes</h2>
-    <a href="#" class="ms-auto">Explore More</a>
+    <a href="/trending" class="ms-auto">Explore More</a>
   </div>
 
   <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
