--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,6 +15,6 @@
     to get in touch with me!
   </p>
   <div class="about-btn d-flex justify-content-center">
-    <a href="#" class="btn btn-success mb-5">Contact Me</a>
+    <a href="/contact" class="btn btn-success mb-5">Contact Me</a>
   </div>
 </div>
