added a img div section to submit recipe page

--- a/views/submit-recipe.ejs
+++ b/views/submit-recipe.ejs
@@ -38,6 +38,15 @@
         </div>
 
         <div class="col-12">
+          <label for="name" class="form-label">Image</label><br />
+          <div class="ingredientList">
+            <div class="ingredeintDiv mb-1">
+              <input type="text" name="image" class="form-control" />
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12">
           <label for="category" class="mb-1">Category</label>
           <select
             class="form-select form-control"
