--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,8 +14,8 @@
       discover your recipes to share with your friends and families!
     </p>
     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-      <a href="/trending" class="btn btn-dark btn-lg">See Trending</a>
-      <a href="/categories" class="btn btn-outline-secondary btn-lg"
+      <a href="/trending" class="btn btn1 btn-lg">See Trending</a>
+      <a href="/categories" class="btn btn2 btn-outline-success btn-lg"
         >Food Category</a
       >
     </div>
@@ -60,7 +60,7 @@
 <section class="submit-section px-4 py-5 my-5 text-center">
   <img
     class="d-block mx-auto mb-4 img-fluid"
-    width="566"
+    width="400"
     height="208"
     src="img/submit.png"
     alt=""
@@ -71,8 +71,6 @@
     recipe in front of millions of people.
   </p>
   <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-    <a href="/submit-recipe" class="btn btn-primary btn-dark btn-lg"
-      >Submit Recipe</a
-    >
+    <a href="/submit-recipe" class="btn btn3 btn-lg">Submit Recipe</a>
   </div>
 </section>
