--- a/views/submit-recipe.ejs
+++ b/views/submit-recipe.ejs
@@ -64,7 +64,7 @@
         </div>
 
         <div class="col-12">
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-lg btn-success">Submit</button>
         </div>
       </div>
     </form>
